[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_09/Pawn_09_Part_Arm.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Tracks_Top.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Tracks_Wheel_Anim.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Tracks_Back.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Tracks_Wheels.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Head.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Body.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Pawns/Pawn_11_Parts/Pawn_11_Pic.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Pawns/Pawn_11/Pawn_11_Face.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Track_T/Sprite_Track_M:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite_Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 0, -6 ) ]
}

[node name="Pawn_11_Pic" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite_Head" type="Sprite" parent="."]
position = Vector2( 0, -18 )
texture = ExtResource( 6 )
hframes = 2

[node name="Sprite_Face" type="Sprite" parent="Sprite_Head"]
texture = ExtResource( 9 )
hframes = 2

[node name="Sprite_Body" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 7 )
hframes = 8
frame = 6

[node name="Pawn_09_Part_Arm" type="Sprite" parent="Sprite_Body"]
position = Vector2( 12, 2 )
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="Sprite_Track_T" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 2 )
hframes = 8

[node name="Sprite_Track_B" type="Sprite" parent="Sprite_Track_T"]
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 4 )
hframes = 8

[node name="Sprite_Track_F" type="Sprite" parent="Sprite_Track_T"]
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 5 )
hframes = 8

[node name="Sprite_Track_M" type="Sprite" parent="Sprite_Track_T"]
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 3 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
